# audio_visualizer

./: CMakeLists.txt  README.md  entitlements.plist
Scripts/: create-dmg-command.sh  notarize-dmg.sh
Source/: Config.cpp  Config.h  CustomLookAndFeel.h  DragOverlay.h  GraphSettingsView.h  LayoutManager.h  LockFreeFifo.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/Algorithms/: AlgorithmChain.h  AmplitudeEnvelope.h  BFCC.h  Bark.h  ConstantQChromagram.h  Energy.h  F0.h  FftMagnitude.h  HighFrequencyContent.h  Loudness.h  MFCC.h  Mel.h  OscSender.h  Rms.h  SpectralCentroid.h  SpectralFlux.h  SpectralRollOff.h  Spectrum.h  ZeroCrossingRate.h
Source/Menu/: ActiveGraphs.h  LayoutChooser.h  MenuBar.h
Source/Windows/: GraphWindow.cpp  GraphWindow.h  Window.cpp  Window.h  WindowContainer.cpp  WindowContainer.h  WindowIDs.h
Source/Windows/Graph/: Graph2d.h  Graph3d.h  GraphBase.h  Graphs.h  Grid.h
Source/Windows/Graph/Behaviours/: Hoverer.h  Zoomer.h
cmake/: CPM.cmake
